# pathos

./: .gitignore  LICENSE  README.md  config.example.yml  install.sh  pyproject.toml
src/pathos/: __init__.py  __main__.py  config.py  context.py  session.py  supervisor.py  updater.py
src/pathos/prompts/: triage.txt  triage_delta.txt  triage_init.txt  validate.txt  validate_delta.txt  validate_init.txt  validate_warmup.txt
