[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathos-supervisor"
dynamic = ["version"]
description = "External supervisor for Claude Code agents — two-stage quality gate with tmux injection"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Stefano Pochet"},
]
keywords = ["claude", "claude-code", "ai", "supervisor", "quality-gate", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/stefanopochet/pathos"
Issues = "https://github.com/stefanopochet/pathos/issues"

[project.scripts]
pathos = "pathos.__main__:main"

[tool.hatch.version]
path = "src/pathos/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pathos"]
